add some changes in 36 files;only conclusions left

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -210,3 +210,27 @@
 	url    = {\url{https://www.docker.com}},
     accessed = {03.06.2024},
 }
+
+@misc{keydb,
+	etitle = {KeyDB --- The Faster Redis Alternative},
+	url    = {\url{https://docs.keydb.dev}},
+    accessed = {06.06.2024},
+}
+
+@misc{python,
+	etitle = {Python ---  A programming language that lets you work quickly and integrate systems more effectively},
+	url    = {\url{https://www.python.org}},
+    accessed = {06.06.2024},
+}
+
+@misc{redis,
+	etitle = {Redis --- The Real-time Data Platform},
+	url    = {\url{https://redis.io}},
+    accessed = {06.06.2024},
+}
+
+@misc{redis-jobs,
+	etitle = {Jobs in UK citing Redis},
+	url    = {\url{https://www.itjobswatch.co.uk/jobs/uk/redis.do}},
+    accessed = {06.06.2024},
+}
