--- a/docs/main.tex
+++ b/docs/main.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 
-\includepdf[pages=-]{title-tz.pdf}
+\includepdf[pages=1]{title-tz.pdf}
 
 % \include{title}
 
@@ -24,7 +24,7 @@
 \include{report/05-conclusion}
 \include{report/06-bibliography}
 
-% \include{report/appendix-a}
-% \include{report/appendix-b}
+\include{report/appendix-a}
+\include{report/appendix-b}
 
 \end{document}
