--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -293,23 +293,23 @@
 \begin{table}[H]
 \centering
 \caption{Интерфейс доступа к базе данных}
-\begin{tabular}{|m{2cm}|m{4cm}|m{9cm}|}
+\begin{tabular}{|m{2cm}|m{2.5cm}|m{10.5cm}|}
 \hline
     \textbf{Метод} & \textbf{URL} & \textbf{Описание} \\ \hline
-    % GET & /api/v1/register & Получение страницы для регистрации \\ \hline
-    POST & /api/v1/register & Регистрация пользователя с введенными именем пользователя, адресом почты и паролем \\ \hline
-    % GET & /api/v1/login & Получение страницы для входа в систему \\ \hline
-    POST & /api/v1/login & Вход в систему по имени пользователя и паролю \\ \hline
-    % GET & /api/v1/profile & Получение личной страницы пользователя \\ \hline
-    GET & /api/v1/d/\{id\} & Получение текста документа с указанным id \\ \hline
-    POST & /api/v1/d & Добавление нового документа \\ \hline
-    GET & /api/v1/tasks & Получение списка заданий для разметки \\ \hline
-    GET & /api/v1/task/\{id\} & Получение страницы с конкретной задачей на разметку \\ \hline
-    POST & /api/v1/task & Создание нового задания на разметку \\ \hline
-    GET & /api/v1/a/\{id\} & Получение разметки с указанным id \\ \hline
-    POST & /api/v1/a & Добавление новой разметки \\ \hline
-    GET & /api/v1/search & Получение страницы для поиска по корпусу \\ \hline
-    POST & /api/v1/search & Выполнение поиска по корпусу \\ \hline
+    % GET & /register & Получение страницы для регистрации \\ \hline
+    POST & /register & Регистрация пользователя с введенными именем пользователя, адресом почты и паролем \\ \hline
+    % GET & /login & Получение страницы для входа в систему \\ \hline
+    POST & /login & Вход в систему по имени пользователя и паролю \\ \hline
+    % GET & /profile & Получение личной страницы пользователя \\ \hline
+    GET & /d/\{id\} & Получение текста документа с указанным id \\ \hline
+    POST & /d & Добавление нового документа \\ \hline
+    GET & /tasks & Получение списка заданий для разметки \\ \hline
+    GET & /task/\{id\} & Получение страницы с конкретной задачей на разметку \\ \hline
+    POST & /task & Создание нового задания на разметку \\ \hline
+    GET & /a/\{id\} & Получение разметки с указанным id \\ \hline
+    POST & /a & Добавление новой разметки \\ \hline
+    GET & /search & Получение страницы для поиска по корпусу \\ \hline
+    POST & /search & Выполнение поиска по корпусу \\ \hline
 \end{tabular}
 \label{tab:api}
 \end{table}
