--- a/docs/report/appendix-a.tex
+++ b/docs/report/appendix-a.tex
@@ -1,1 +1,17 @@
 \phantomsection\section*{ПРИЛОЖЕНИЕ А}\addcontentsline{toc}{section}{ПРИЛОЖЕНИЕ А}
+
+\lstset{language=Golang}
+\begin{lstinputlisting}[
+    label={lst:go:cache},
+    caption={Кеширование текста документов},
+]{lst/document_cache.go}
+\end{lstinputlisting}
+
+\newpage
+
+\lstset{language=Python, morekeywords={self}}
+\begin{lstinputlisting}[
+    label={lst:locustfile},
+    caption={Содержимое файла locustfile.py для проведения нагрузочного тестирования},
+]{lst/locustfile.py}
+\end{lstinputlisting}
