--- a/docs/report/appendix-b.tex
+++ b/docs/report/appendix-b.tex
@@ -1,1 +1,5 @@
 \phantomsection\section*{ПРИЛОЖЕНИЕ Б}\addcontentsline{toc}{section}{ПРИЛОЖЕНИЕ Б}
+
+\subsection*{Презентация к курсовой работе}
+
+Презентация состоит из N слайдов.
