--- a/docs/report/04-research.tex
+++ b/docs/report/04-research.tex
@@ -1,5 +1,49 @@
 \section{Исследовательский раздел}
 
+В данном разделе будет приведено описание исследования зависимости времени ответа от количества запросов в секунду, технические характеристики устройства, на котором оно проводилось, и представлены его результаты.
+
+\subsection*{Цель исследования}
+
+Целью исследования является получение зависимости времени ответа от количества запросов в секунду и сравнения эффективности реализаций приложения с использованием дополнительного кеширования и без него.
+
+\subsection{Описание исследования}
+
+В качестве базы данных для дополнительного кеширования была выбрана KeyDB~\cite{keydb}, так как ее функциональности достаточно для обеспечения кеширования, а также она является бесплатной и открытой альтернативой Redis~\cite{redis} --- известной базы данных для этих целей~\cite{redis-jobs}.
+
+В качестве инструмента для проведения нагрузочного тестирования был выбран Locust~\cite{locust}, так как его функциональности достаточно для проведения нагрузочного тестирования, а также присутствует возможность написания тестовых сценариев на простом скриптовом языке Python~\cite{python}.
+
+Проведение нагрузочного тестирования в Locust состоит из нескольких этапов:
+\begin{enumerate}
+    \item Написание сценариев тестирования в файле locustfile.py;
+    \item Установка максимального количества запросов в секунду, шага увеличения количества запросов в секунду и времени, на протяжении которого будет проводиться нагрузочного тестирования;
+    \item Просмотр и экспорт статистики и результатов проведенного нагрузочного тестирования.
+\end{enumerate}
+
+Содержимое файла со сценариями тестирования приведено в листинге \ref{lst:locustfile} приложения А; пример использования кеша в приложении --- в листинге \ref{lst:go:cache}, а примеры интерфейса Locust, соответствующие этапам 2 и 3 проведения нагрузочного тестирования --- на рисунках \ref{locust:1} -- \ref{locust:3} ниже.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/locust-scr-1.png}
+	\caption{Запуск нагрузочного тестирования в Locust}
+	\label{locust:1}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/locust-scr-2.png}
+	\caption{Просмотр статистики нагрузочного тестирования в реальном времени}
+	\label{locust:2}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/locust-scr-3.png}
+	\caption{Просмотр графиков нагрузочного тестирования в реальном времени}
+	\label{locust:3}
+\end{figure}
+
+\newpage
+
 \subsection{Технические характеристики}
 
 Технические характеристики устройства, на котором выполнялись замеры времени, представлены ниже.
@@ -10,13 +54,141 @@
     \item Версия ядра: \texttt{6.1.64}.
 \end{enumerate}
 
-При выполнении замеров времени ноутбук был подключен к сети электропитания, был запущен браузер Chromium~\cite{chromium} с одной вкладкой и три терминала Alacritty~\cite{alacritty}, в которых выполнялись locust~\cite{locust}, сервер на Go и Neovim.
+При выполнении замеров времени ноутбук был подключен к сети электропитания, был запущен браузер Chromium~\cite{chromium} с одной вкладкой, три терминала Alacritty~\cite{alacritty}, в которых выполнялись Locust, сервер на Go и Neovim.
 На фоне работал Docker-контейнер~\cite{docker} с базой данных.
 
-\subsection{Описание исследования}
+\subsection{Результаты исследования}
 
-\cite{locust}
+Далее приведены таблицы и графики с результатами исследования.
+Поясняющие комментарии к таблицам приводятся после таблицы \ref{tab:cache:95}; к графикам --- после каждого графика.
 
-\subsection{Проведение исследования}
+Данные в правых колонках таблиц являются усредненным значением из общего количества запросов к моменту времени, когда число запросов в секунду составляло значение из левой колонки таблицы.
+Так, например, в таблице \ref{tab:nocache:avg} время ответа 0.086 секунд является средним из 10 запросов, а время ответа 0.555 секунд --- средним из 15438 запросов, так как нагрузочное тестирование проводилось на протяжении 40 секунд с приростом количества имитируемых пользователей приложения --- 100 новых пользователей в секунду.
+В таблице \ref{tab:cache:avg} время ответа 0.465 является средним из  16103 запросов.
+
+\begin{table}[H]
+\centering
+\caption{Зависимость среднего времени ответа от количества запросов в секунду без использования кеширования}
+\begin{tabular}{|c|c|}
+\hline
+    \textbf{Число запросов в секунду} & \textbf{Среднее время ответа (с)} \\ \hline
+     10 & 0.086 \\ \hline             
+    127 & 0.068 \\ \hline             
+    161 & 0.058 \\ \hline             
+    193 & 0.060 \\ \hline             
+    225 & 0.050 \\ \hline             
+    387 & 0.044 \\ \hline             
+    456 & 0.047 \\ \hline             
+    581 & 0.055 \\ \hline             
+    644 & 0.070 \\ \hline             
+    696 & 0.095 \\ \hline             
+    722 & 0.222 \\ \hline             
+    727 & 0.290 \\ \hline             
+    741 & 0.465 \\ \hline             
+    752 & 0.555 \\ \hline             
+\end{tabular}
+\label{tab:nocache:avg}
+\end{table}
+
+\begin{table}[H]
+\centering
+\caption{Зависимость 95-го процентиля времени ответа от количества запросов в секунду без использования кеширования}
+\begin{tabular}{|c|c|}
+\hline
+    \textbf{Число запросов в секунду} & \textbf{95-й процентиль времени ответа (с)} \\ \hline
+     10 & 0.110 \\ \hline             
+    127 & 0.160 \\ \hline             
+    161 & 0.150 \\ \hline             
+    193 & 0.180 \\ \hline             
+    225 & 0.160 \\ \hline             
+    387 & 0.160 \\ \hline             
+    456 & 0.170 \\ \hline             
+    581 & 0.260 \\ \hline             
+    644 & 0.330 \\ \hline             
+    696 & 0.450 \\ \hline             
+    722 & 1.200 \\ \hline             
+    727 & 1.600 \\ \hline             
+    741 & 2.800 \\ \hline             
+    752 & 3.800 \\ \hline             
+\end{tabular}
+\label{tab:nocache:95}
+\end{table}
+
+\begin{table}[H]
+\centering
+\caption{Зависимость среднего времени ответа от количества запросов в секунду при использовании кеширования}
+\begin{tabular}{|c|c|}
+\hline
+    \textbf{Число запросов в секунду} & \textbf{Среднее время ответа (с)} \\ \hline
+     10 & 0.086 \\ \hline
+    112 & 0.070 \\ \hline
+    172 & 0.063 \\ \hline
+    202 & 0.060 \\ \hline
+    236 & 0.053 \\ \hline
+    300 & 0.050 \\ \hline
+    362 & 0.049 \\ \hline
+    424 & 0.050 \\ \hline
+    493 & 0.054 \\ \hline
+    611 & 0.058 \\ \hline
+    685 & 0.074 \\ \hline
+    730 & 0.110 \\ \hline
+    761 & 0.238 \\ \hline
+    771 & 0.303 \\ \hline
+    780 & 0.465 \\ \hline
+\end{tabular}
+\label{tab:cache:avg}
+\end{table}
+
+\begin{table}[H]
+\centering
+\caption{Зависимость 95-го процентиля времени ответа от количества запросов в секунду при использовании кеширования}
+\begin{tabular}{|c|c|}
+\hline
+    \textbf{Число запросов в секунду} & \textbf{95-й процентиль времени ответа (с)} \\ \hline
+     10 & 0.130 \\ \hline             
+    112 & 0.120 \\ \hline             
+    172 & 0.170 \\ \hline             
+    202 & 0.180 \\ \hline             
+    236 & 0.170 \\ \hline             
+    300 & 0.170 \\ \hline             
+    362 & 0.180 \\ \hline             
+    424 & 0.180 \\ \hline             
+    493 & 0.210 \\ \hline             
+    611 & 0.250 \\ \hline             
+    685 & 0.320 \\ \hline             
+    730 & 0.470 \\ \hline             
+    761 & 1.300 \\ \hline             
+    771 & 1.500 \\ \hline             
+    780 & 3.100 \\ \hline             
+\end{tabular}
+\label{tab:cache:95}
+\end{table}
+
+По таблицам \ref{tab:nocache:avg} и \ref{tab:cache:avg} можно увидеть, что при 752 запросах в секунду к приложению, не использующему кеш KeyDB, среднее время ответа составляет 0.555 секунд, а при 780 запросах в секунду к приложению, использующему кеш KeyDB, среднее время ответа составляет 0.465 секунд.
+
+По таблицам \ref{tab:nocache:95} и \ref{tab:cache:95} можно увидеть, что 95 процентов запросов при 752 запросах в секунду к приложению, не использующему кеш KeyDB, обрабатываются быстрее 3.8 секунд, а при 780 запросах в секунду к приложению, использующему кеш KeyDB, 95 процентов запросов обрабатываются быстрее 3.1 секунды.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/avg-resp-time.pdf}
+	\caption{Зависимость среднего времени ответа от количества запросов в секунду}
+	\label{plot:avg}
+\end{figure}
+
+По графику \ref{plot:avg} можно заметить, что среднее время ответа убывает примерно до 350 запросов в секунду, после чего начинается экспоненциальный рост.
+Более высокие значения среднего времени ответа на ранних этапах обусловлены тем, что большая часть запрашиваемых данных пока еще не находится в кеше KeyDB или базы данных.
+После 600 запросов в секунду использование кеша KeyDB начинает давать прирост производительности.
+При 730 запросах в секунду запросы к приложению, использующему кеш KeyDB, обрабатываются быстрее примерно в 2.64 раза.
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/95-resp-time.pdf}
+	\caption{Зависимость 95-го процентиля времени ответа от количества запросов в секунду}
+	\label{plot:95}
+\end{figure}
+
+По графику \ref{plot:95} видно, что при 750 запросах в секунду 95 процентов запросов к приложению, использующему кеш KeyDB, обрабатываются примерно в 3.45 раза быстрее.
+После 700 запросов в секунду возникает резкий скачок 95-го процентили времени ответа и начинается экспоненциальный рост.
 
 \subsection*{Вывод}
