research conclusion done

--- a/docs/report/04-research.tex
+++ b/docs/report/04-research.tex
@@ -192,3 +192,10 @@
 После 700 запросов в секунду возникает резкий скачок 95-го процентили времени ответа и начинается экспоненциальный рост.
 
 \subsection*{Вывод}
+
+В данном разделе было проведено исследование зависимости времени ответа от количества запросов в секунду.
+Среднее время ответа увеличивается с увеличением количества запросов в секунду.
+В определенный момент среднее время ответа возрастает в 1.91 раз с увеличением количества запросов в секунду в 1.05 раза.
+
+Использование дополнительного кеша позволяет ускорить среднее время ответа.
+Так при 752 запросах в секунду использование кеша позволило ускорить среднее время ответа более, чем в 3 раза.
