--- a/docs/main.tex
+++ b/docs/main.tex
@@ -11,6 +11,9 @@
 % \include{task}
 
 \setcounter{page}{3}
+
+\include{report/referat}
+
 \renewcommand{\contentsname}{СОДЕРЖАНИЕ}
 \tableofcontents
 
