--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -255,3 +255,9 @@
 % \setsansfont{Roboto} % Liberation Sans} % ~ Arial
 % \setsansfont{Liberation Sans} % ~ Arial
 % \setmonofont{Liberation Mono} % ~ Courier New
+
+\usepackage{totcount}
+
+% Подсчет количества рисунков и таблиц
+\regtotcounter{figure}
+\regtotcounter{table}
