is referat done?

--- a/docs/report/referat.tex
+++ b/docs/report/referat.tex
@@ -8,13 +8,13 @@
 БАЗА ДАННЫХ,
 РЕЛЯЦИОННАЯ МОДЕЛЬ,
 POSTGRESQL,
+KEYDB,
 LOCUST
 
-% Пример из ГОСТа
-% Объектом исследования являются поршневые установки для точного воспроизведения и измерения больших расходов газа.
-% Цель работы — разработка методики метрологических исследований установок и нестандартной аппаратуры для их осуществления.
-% В процессе работы проводились экспериментальные исследования отдельных составляющих и общей погрешности установок.
-% В результате исследования впервые были созданы две поршневые реверсивные расходомерные установки: первая на расходы до 0,07 м3/с, вторая — до 0,33 м3/с.
-% Основные конструктивные и технико-эксплуатационные показатели: высокая точность измерения при больших значениях расхода газа.
-% Степень внедрения — вторая установка по разработанной методике аттестована как образцовая.
-% Эффективность установок определяется их малым влиянием на ход измеряемых процессов. Обе установки могут применяться для градуировки и поверки промышленных ротационных счетчиков газа, а также тахометрических расходомеров.
+Цель работы --- разработка базы данных для автоматизации рабочего места разметчиков параллельного корпуса технических текстов.
+
+В данной работе был проведен анализ предметной области корпусов текстов, рассмотрены существующие модели данных и была выбрана модель, на основе которой проводилась дальнейшая разработка базы данных.
+Были спроектированы и реализованы 10 сущностей базы данных, ограничения целостности, ролевая модель на уровне базы данных.
+Было описан интерфейс для доступа к базе данных и было разработано Web-приложение для взаимодействия с базой данных.
+Было проведено исследование зависимости времени ответа от количества запросов в секунду и проведен сравнительный анализ эффективности реализаций приложения с использованием дополнительного кеширования и без него.
+В результате исследования был получен следующий результат --- при 752 запросах в секунду использование кеша позволяет ускорить среднее время ответа более, чем в 3 раза.
