GET /a -> GET /annot

--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -306,8 +306,8 @@
     GET & /tasks & Получение списка заданий для разметки \\ \hline
     GET & /task/\{id\} & Получение страницы с конкретной задачей на разметку \\ \hline
     POST & /task & Создание нового задания на разметку \\ \hline
-    GET & /a/\{id\} & Получение разметки с указанным id \\ \hline
-    POST & /a & Добавление новой разметки \\ \hline
+    GET & /annot/\{id\} & Получение разметки с указанным id \\ \hline
+    POST & /annot & Добавление новой разметки \\ \hline
     GET & /search & Получение страницы для поиска по корпусу \\ \hline
     POST & /search & Выполнение поиска по корпусу \\ \hline
 \end{tabular}
