omg am I FOCKING almost done??

--- a/docs/report/05-conclusion.tex
+++ b/docs/report/05-conclusion.tex
@@ -1,1 +1,20 @@
 \phantomsection\section*{ЗАКЛЮЧЕНИЕ}\addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
+
+Цель данной работы была достигнута, а именно, была разработана база данных для автоматизации рабочего места разметчиков параллельного корпуса технических текстов.
+
+Для достижения поставленной цели были решены следующие задачи:
+\begin{enumerate}
+    \item Проведен анализ предметной области корпусов текстов;
+    \item Формализованы задача, данные и пользователи, взаимодействующие с приложением к базе данных;
+    \item Рассмотрены существующие модели данных и выбрана реляционная модель;
+    \item Были спроектированы и реализованы 10 сущностей базы данных;
+    \item Были спроектированы и реализованы ограничения целостности базы данных;
+    \item Был спроектирован и реализован триггер базы данных, отвечающий за коррекцию <<рейтинга доверия>> разметчиков;
+    \item Был описан интерфейс доступа к базе данных, осуществляемого с помощью REST API;
+    \item На основе описанного интерфейса было реализовано Web-приложение для доступа к базе данных;
+    \item Было проведено исследование зависимости времени ответа от количества запросов в секунду и сравнение эффективности реализаций приложения с использованием дополнительного кеширования и без него.
+\end{enumerate}
+
+В результате исследования выяснилось, что кеширование позволяет сильно (более чем в 3 раза) уменьшить среднее время ответа при большом (752) количестве запросов в секунду.
+По мере увеличения количества запросов в секунду наблюдается экспоненциальный рост среднего времени ответа.
+
