omg am I FOCKING almost done??

--- a/docs/report/referat.tex
+++ b/docs/report/referat.tex
@@ -18,3 +18,4 @@ LOCUST
 Было описан интерфейс для доступа к базе данных и было разработано Web-приложение для взаимодействия с базой данных.
 Было проведено исследование зависимости времени ответа от количества запросов в секунду и проведен сравнительный анализ эффективности реализаций приложения с использованием дополнительного кеширования и без него.
 В результате исследования был получен следующий результат --- при 752 запросах в секунду использование кеша позволяет ускорить среднее время ответа более, чем в 3 раза.
+По мере увеличения количества запросов в секунду можно наблюдать экспоненциальный рост времени ответа.
