right margin overflow fix (Opus)

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -132,7 +132,7 @@
 
 \subsection{Существующие решения}
 
-В современном мире существует множество параллельных корпусов (Opus, Linguee, MyMemory, Glosbe, Reverso, TAUS Data Cloud и др.)~\cite{butenko2020-1}, сервисов для автоматического выравнивания текстов (Hunalign, Euclid, Abbyy Aligner, Trados, Winalign, Wordfast tools, Giza++ и др.)~\cite[с. 62]{cl2020}, служб, позволяющих создавать собственные корпусы и производить в них поиск (SketchEngine~\cite{ske}, NoSketchEngine~\cite{noske}); инструментов для автоматического извлечения терминов (TerMine, TermExtraction, Terminology Extraction)~\cite{butenko2022} и прочих инструментов для работы с корпусами текстов (OpenCorpora~\cite{opencorpora}).
+В современном мире существует множество параллельных корпусов (My-Memory, Opus, Linguee, Glosbe, Reverso, TAUS Data Cloud и др.)~\cite{butenko2020-1}, сервисов для автоматического выравнивания текстов (Hunalign, Euclid, Abbyy Aligner, Trados, Winalign, Wordfast tools, Giza++ и др.)~\cite[с. 62]{cl2020}, служб, позволяющих создавать собственные корпусы и производить в них поиск (SketchEngine~\cite{ske}, NoSketchEngine~\cite{noske}); инструментов для автоматического извлечения терминов (TerMine, TermExtraction, Terminology Extraction)~\cite{butenko2022} и прочих инструментов для работы с корпусами текстов (OpenCorpora~\cite{opencorpora}).
 
 Но на данный момент не существует открытых параллельных корпусов технических текстов~\cite{butenko2020-2}.
 Также нет открытых информационных систем, позволяющих одновременно производить разметку текста в параллельном корпусе, производить поиск по параллельному корпусу и организовать удобную работу множества разметчиков.
