--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -145,7 +145,7 @@
 \begin{itemize}
     \item добавления новых документов в базу данных,
     \item добавления новых разметок в базу данных,
-    \item произведения поиска по текстам и разметкам, хранящимся в базе данных.
+    \item произведения поиска по текстам, хранящимся в базе данных.
 \end{itemize}
 
 \subsection{Формализация данных}
