remove research goal section

--- a/docs/report/04-research.tex
+++ b/docs/report/04-research.tex
@@ -2,9 +2,9 @@
 
 В данном разделе будет приведено описание исследования зависимости времени ответа от количества запросов в секунду, технические характеристики устройства, на котором оно проводилось, и представлены его результаты.
 
-\subsection*{Цель исследования}
+% \subsection*{Цель исследования}
 
-Целью исследования является получение зависимости времени ответа от количества запросов в секунду и сравнения эффективности реализаций приложения с использованием дополнительного кеширования и без него.
+% Целью исследования является получение зависимости времени ответа от количества запросов в секунду и сравнения эффективности реализаций приложения с использованием дополнительного кеширования и без него.
 
 \subsection{Описание исследования}
 
