remove pages in quotations

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -30,7 +30,7 @@
         % Доступность & Свободно доступные, коммерческие, закрытые \\ \hline
         Объем текстов & Полнотекстовые, «фрагментнотекстовые» \\ \hline
     \end{tabular}
-    \caption{Классификация корпусов~\cite[с. 57]{cl2020}}
+    \caption{Классификация корпусов~\cite{cl2020}}
     \label{tab:cc}
 \end{table}
 
@@ -38,10 +38,10 @@
 
 \subsubsection*{Параллельные корпусы}
 
-Параллельные корпусы --- корпусы, представляющие собой множество текстов-оригиналов, написанных на каком-либо исходном языке, и текстов --- переводов этих исходных текстов на один или несколько других языков~\cite[с. 61]{cl2020}.
+Параллельные корпусы --- корпусы, представляющие собой множество текстов-оригиналов, написанных на каком-либо исходном языке, и текстов --- переводов этих исходных текстов на один или несколько других языков~\cite{cl2020}.
 
 При подготовке параллельных корпусов и разработке программ для их обработки, требуется выровнять тексты --- установить соответствие между фрагментами текста оригинала и текста перевода.
-Для решения этой задачи существуют различные методы автоматического выравнивания текстов по предложениям, грамматическим конструкциям, терминам, словам и словосочетаниям.~\cite[с. 61]{cl2020}
+Для решения этой задачи существуют различные методы автоматического выравнивания текстов по предложениям, грамматическим конструкциям, терминам, словам и словосочетаниям.~\cite{cl2020}
 
 Ниже приведен пример выравнивания текстов на уровне предложений.
 
@@ -52,7 +52,7 @@
         1 & THE PLAY — for which Briony had designed the posters, programs and tickets, constructed the sales booth out of a folding screen tipped on its side, and lined the collection box in red crepe paper — was written by her in a two-day tempest of composition, causing her to miss a breakfast and a lunch. & Пьеса, для которой Брайони рисовала афиши, делала программки и билеты, сооружала из ширмы кассовую будку и обклеивала коробку для денежных сборов гофрированной красной бумагой, была написана ею за два дня в порыве вдохновения, заставлявшего ее забывать даже о еде. \\ \hline
         2 & When the preparations were complete, she had nothing to do but contemplate her finished draft and wait for the appearance of her cousins from the distant north. & Когда приготовления закончились, ей не оставалось ничего, кроме как созерцать свое творение и ждать появления кузенов и кузины, которые должны были прибыть с далекого севера. \\ \hline
     \end{tabular}
-    \caption{Пример выравнивания текстов на уровне предложений~\cite[с. 62]{cl2020}}
+    \caption{Пример выравнивания текстов на уровне предложений~\cite{cl2020}}
     \label{tab:al}
 \end{table}
 
@@ -74,7 +74,7 @@
 \subsubsection*{Типы текстовых разметок}
 
 Существует множество типов текстовых разметок.
-Большинство современных корпусов относятся к корпусам морфологического или синтаксического вида~\cite[с. 56]{cl2020}.
+Большинство современных корпусов относятся к корпусам морфологического или синтаксического вида~\cite{cl2020}.
 % Таким, например, является НКРЯ --- Национальный Корпус Русского Языка~\cite{ruscorpora}.
 
 Далее подробнее будут рассмотрены структурная и семантическая разметки, поскольку они являются основными типами разметки в параллельном корпусе технических текстов.
@@ -102,7 +102,7 @@
 Основная цель семантической разметки --- <<формализировать>> значения слов и сделать тексты пригодными для машинной обработки.~\cite{butenko2022-2}
 
 Существует множество видов семантических разметок.
-Один из вариантов русской семантической разметки представлен на сайте Центра компьютерных и корпусных языковых исследований Ланкастерского университета~\cite[с. 51]{ucrel, cl2020}:
+Один из вариантов русской семантической разметки представлен на сайте Центра компьютерных и корпусных языковых исследований Ланкастерского университета~\cite{ucrel, cl2020}:
 
 \begin{table}[H]
     \centering
@@ -132,7 +132,7 @@
 
 \subsection{Существующие решения}
 
-В современном мире существует множество параллельных корпусов (My-Memory, Opus, Linguee, Glosbe, Reverso, TAUS Data Cloud и др.)~\cite{butenko2020-1}, сервисов для автоматического выравнивания текстов (Hunalign, Euclid, Abbyy Aligner, Trados, Winalign, Wordfast tools, Giza++ и др.)~\cite[с. 62]{cl2020}, служб, позволяющих создавать собственные корпусы и производить в них поиск (SketchEngine~\cite{ske}, NoSketchEngine~\cite{noske}); инструментов для автоматического извлечения терминов (TerMine, TermExtraction, Terminology Extraction)~\cite{butenko2022} и прочих инструментов для работы с корпусами текстов (OpenCorpora~\cite{opencorpora}).
+В современном мире существует множество параллельных корпусов (My-Memory, Opus, Linguee, Glosbe, Reverso, TAUS Data Cloud и др.)~\cite{butenko2020-1}, сервисов для автоматического выравнивания текстов (Hunalign, Euclid, Abbyy Aligner, Trados, Winalign, Wordfast tools, Giza++ и др.)~\cite{cl2020}, служб, позволяющих создавать собственные корпусы и производить в них поиск (SketchEngine~\cite{ske}, NoSketchEngine~\cite{noske}); инструментов для автоматического извлечения терминов (TerMine, TermExtraction, Terminology Extraction)~\cite{butenko2022} и прочих инструментов для работы с корпусами текстов (OpenCorpora~\cite{opencorpora}).
 
 Но на данный момент не существует открытых параллельных корпусов технических текстов~\cite{butenko2020-2}.
 Также нет открытых информационных систем, позволяющих одновременно производить разметку текста в параллельном корпусе, производить поиск по параллельному корпусу и организовать удобную работу множества разметчиков.
@@ -235,7 +235,7 @@
 \subsubsection{Инвертированные списки}
 
 Модель инвертированных списков похожа на реляционную, но на более низком уровне абстракции --- хранимые таблицы, а также некоторые пути доступа к этим хранимым таблицам (в частности, некоторые индексы) напрямую доступны пользователю.
-Как и реляционная база данных, база данных инвертированных списков содержит множество <<таблиц>> или файлов, и эти <<таблицы>> или файлы разделены на строки (записи) и колонки (поля), как и в реляционном случае.~\cite[с. 388]{date-wr}
+Как и реляционная база данных, база данных инвертированных списков содержит множество <<таблиц>> или файлов, и эти <<таблицы>> или файлы разделены на строки (записи) и колонки (поля), как и в реляционном случае.~\cite{date-wr}
 
 Однако, существуют и некоторые значительные различия:
 \begin{enumerate}
@@ -255,11 +255,11 @@
 Операторы поиска, в свою очередь, делятся на две подкатегории:
 \begin{enumerate}[label=\asbuk*)]
     \item Операторы, которые находят запись <<из ниоткуда>> --- то есть операторы прямого поиска.
-    \item Операторы, которые находят запись в терминах ее позиции относительно какого-либо ранее установленного адреса --- то есть операторы относительного поиска.~\cite[с. 389]{date-wr}
+    \item Операторы, которые находят запись в терминах ее позиции относительно какого-либо ранее установленного адреса --- то есть операторы относительного поиска.~\cite{date-wr}
 \end{enumerate}
 
 Модель инвертированных списков не поддерживает общие правила целостности.
-Большинство ограничений должны обеспечиваться пользователем, включая ссылочную целостность.~\cite[с. 391]{date-wr}
+Большинство ограничений должны обеспечиваться пользователем, включая ссылочную целостность.~\cite{date-wr}
 
 \subsubsection{Иерархическая}
 
@@ -267,9 +267,9 @@
 
 Тип дерева включает один корневой тип записи и упорядоченную коллекцию зависимых (нижнего уровня) типов поддеревьев.
 Тип поддерева, в свою очередь, также состоит из одного типа записи --- корневого типа поддерева --- и упорядоченной коллекции зависимых типов поддеревьев нижнего уровня.
-Таким образом, весь тип дерева представляет собой иерархическую структуру типов записей.~\cite[с. 406]{date-wr}
+Таким образом, весь тип дерева представляет собой иерархическую структуру типов записей.~\cite{date-wr}
 
-Основное различие между иерархической и реляционной структурой заключается в следующем: в иерархической базе данных информация, которая в реляционной базе данных представлена внешними ключами, представлена связями <<родитель-ребенок>>.~\cite[с. 408]{date-wr}
+Основное различие между иерархической и реляционной структурой заключается в следующем: в иерархической базе данных информация, которая в реляционной базе данных представлена внешними ключами, представлена связями <<родитель-ребенок>>.~\cite{date-wr}
 
 Язык манипулирования данными в иерархической базе данных включает операторы для работы с данными в виде деревьев:
 \begin{itemize}
@@ -280,12 +280,12 @@
     \item Удаление указанной записи.
 \end{itemize}
 
-Эти операторы, как правило, работают на уровне записей (манипулируют отдельными записями (или строками) в базе данных, а не группами записей или целыми наборами данных).~\cite[с. 410]{date-wr}
+Эти операторы, как правило, работают на уровне записей (манипулируют отдельными записями (или строками) в базе данных, а не группами записей или целыми наборами данных).~\cite{date-wr}
 
 Иерархическая модель автоматически поддерживает ссылочную целостность по правилу: ни один потомок не может существовать без своего родителя.
 Если удаляется родитель, система удаляет все поддерево.
 Потомок не может быть вставлен без существующего родителя.
-Это эквивалентно соблюдению правил внешнего ключа в реляционной модели.~\cite[с. 411]{date-wr}
+Это эквивалентно соблюдению правил внешнего ключа в реляционной модели.~\cite{date-wr}
 
 \subsubsection{Сетевая}
 
@@ -299,7 +299,7 @@
 \end{itemize}
 
 Таким образом, сетевую структуру данных можно рассматривать как расширенную форму иерархической структуры данных.
-Основное различие между ними заключается в следующем: в иерархической структуре у дочерней записи есть ровно один родитель; в сетевой структуре у дочерней записи может быть любое количество родителей.~\cite[с. 447]{date-wr}
+Основное различие между ними заключается в следующем: в иерархической структуре у дочерней записи есть ровно один родитель; в сетевой структуре у дочерней записи может быть любое количество родителей.~\cite{date-wr}
 
 Язык манипулирования данными в сетевой базе данных состоит из набора операторов для работы с данными, представленными в виде записей и связей.
 Примеры таких операторов включают следующее:
@@ -316,7 +316,7 @@
 Эти операторы обычно так же, как и в инвертированных списках, и в иерархической модели, работают на уровне записей.
 
 Сетевая модель, как и иерархическая, включает встроенную поддержку ссылочной целостности через связи.
-Например, можно задать правило, что дочерняя запись не может быть вставлена без существующего родителя.~\cite[с. 452]{date-wr}
+Например, можно задать правило, что дочерняя запись не может быть вставлена без существующего родителя.~\cite{date-wr}
 
 \subsubsection{Постреляционная}
 
