--- a/docs/report/00-definitions.tex
+++ b/docs/report/00-definitions.tex
@@ -2,7 +2,7 @@
 
 В настоящей расчетно-пояснительной записке применяют следующие термины с соответствующими определениями.
 
-\uline{База данных} --- это некоторый набор перманентных (постоянно хранимых) данных, используемых прикладными программными системами какого-либо предприятия.~\cite[с. 51]{date}
+\uline{База данных} --- это некоторый набор перманентных (постоянно хранимых) данных, используемых прикладными программными системами какого-либо предприятия.~\cite{date}
 
 \uline{Домен} --- это подмножество значений некоторого типа данных, имеющих определенный смысл.~\cite{lecnotes}
 
@@ -33,4 +33,4 @@
 
 \uline{Реляционная база данных} --- это набор отношений, имена которых совпадают с именами схем отношений в схеме базы данных.~\cite{lecnotes}
 
-\uline{Система управления базой данных} (СУБД) представляет собой программное обеспечение, которое управляет всем доступом к базе данных.~\cite[с. 87]{date}
+\uline{Система управления базой данных} (СУБД) представляет собой программное обеспечение, которое управляет всем доступом к базе данных.~\cite{date}
