fix tables: caption above; about the same size

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -15,7 +15,8 @@
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{|p{5cm}|p{11cm}|}
+    \caption{Классификация корпусов~\cite{cl2020}}
+    \begin{tabular}{|p{0.3\linewidth}|p{0.65\linewidth}|}
         \hline
         \textbf{Признак} & \textbf{Типы корпусов} \\ \hline
         Цель & Многоцелевые, специализированные \\ \hline
@@ -30,7 +31,6 @@
         % Доступность & Свободно доступные, коммерческие, закрытые \\ \hline
         Объем текстов & Полнотекстовые, «фрагментнотекстовые» \\ \hline
     \end{tabular}
-    \caption{Классификация корпусов~\cite{cl2020}}
     \label{tab:cc}
 \end{table}
 
@@ -47,12 +47,12 @@
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{|p{1cm}|p{7cm}|p{7cm}|}
+    \caption{Пример выравнивания текстов на уровне предложений~\cite{cl2020}}
+    \begin{tabular}{|p{1cm}|p{7.25cm}|p{7.25cm}|}
         \hline
         1 & THE PLAY — for which Briony had designed the posters, programs and tickets, constructed the sales booth out of a folding screen tipped on its side, and lined the collection box in red crepe paper — was written by her in a two-day tempest of composition, causing her to miss a breakfast and a lunch. & Пьеса, для которой Брайони рисовала афиши, делала программки и билеты, сооружала из ширмы кассовую будку и обклеивала коробку для денежных сборов гофрированной красной бумагой, была написана ею за два дня в порыве вдохновения, заставлявшего ее забывать даже о еде. \\ \hline
         2 & When the preparations were complete, she had nothing to do but contemplate her finished draft and wait for the appearance of her cousins from the distant north. & Когда приготовления закончились, ей не оставалось ничего, кроме как созерцать свое творение и ждать появления кузенов и кузины, которые должны были прибыть с далекого севера. \\ \hline
     \end{tabular}
-    \caption{Пример выравнивания текстов на уровне предложений~\cite{cl2020}}
     \label{tab:al}
 \end{table}
 
@@ -106,7 +106,8 @@
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{|p{5cm}|p{11cm}|}
+    \caption{Русская семантическая разметка~\cite{ucrel}}
+    \begin{tabular}{|p{0.3\linewidth}|p{0.65\linewidth}|}
         \hline
         A & Общие понятия \\ \hline
         A1 & Общие понятия \\ \hline
@@ -122,7 +123,6 @@
         C & Искусства и ремесла \\ \hline
         ... & ............................................................ \\ \hline
     \end{tabular}
-    \caption{Русская семантическая разметка~\cite{ucrel}}
     \label{tab:rsm}
 \end{table}
 
