--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -293,7 +293,8 @@
 \begin{table}[H]
 \centering
 \caption{Интерфейс доступа к базе данных}
-\begin{tabular}{|m{2cm}|m{2.5cm}|m{10.5cm}|}
+% \begin{tabular}{|m{2cm}|m{2.5cm}|m{10.5cm}|}
+\begin{tabular}{|m{0.1\linewidth}|m{0.16\linewidth}|m{0.67\linewidth}|}
 \hline
     \textbf{Метод} & \textbf{URL} & \textbf{Описание} \\ \hline
     % GET & /register & Получение страницы для регистрации \\ \hline
