upd preamble ragged right tables; pdf

--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -210,7 +210,8 @@
 % Работа с изображениями и таблицами; переопределение названий по ГОСТу
 \usepackage{caption}
 \captionsetup[figure]{name={Рисунок},labelsep=endash}
-\captionsetup[table]{singlelinecheck=false, labelsep=endash}
+% \captionsetup[table]{singlelinecheck=false, labelsep=endash}
+\captionsetup[table]{justification=raggedright, singlelinecheck=false, labelsep=endash}
 
 \usepackage[justification=centering]{caption} % Настройка подписей float объектов	
 
