--- a/docs/report/04-research.tex
+++ b/docs/report/04-research.tex
@@ -1,6 +1,6 @@
 \section{Исследовательский раздел}
 
-В данном разделе будет приведено описание исследования зависимости времени ответа от количества запросов в секунду, технические характеристики устройства, на котором оно проводилось, и представлены его результаты.
+В данном разделе будет приведено описание исследования зависимости времени ответа от количества запросов в секунду и сравнения эффективности реализаций приложения с использованием дополнительного кеширования и без него, технические характеристики устройства, на котором оно проводилось, и представлены его результаты.
 
 % \subsection*{Цель исследования}
 
